--- a/package.json
+++ b/package.json
@@ -6,17 +6,23 @@
   "node": "22",
   "type": "module",
   "scripts": {
-    "dev": "node --watch --experimental-strip-types server.ts"
+    "dev": "node --.env.file .env --watch --experimental-strip-types server.ts",
+    "db:generate": "npx drizzle-kit generate",
+    "db:migrate": "npx drizzle-kit migrate",
+    "db:studio": "npx drizzle-kit studio"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "drizzle-orm": "^0.44.5",
     "fastify": "^5.6.0",
+    "pg": "^8.16.3",
     "pino-pretty": "^13.1.1"
   },
   "devDependencies": {
     "@types/node": "^24.5.2",
+    "drizzle-kit": "^0.31.5",
     "tsx": "^4.20.5",
     "typescript": "^5.9.2"
   }
