--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "node": "22",
   "type": "module",
   "scripts": {
-    "dev": "node --.env.file .env --watch --experimental-strip-types server.ts",
+    "dev": "node --env-file .env --watch --experimental-strip-types server.ts",
     "db:generate": "npx drizzle-kit generate",
     "db:migrate": "npx drizzle-kit migrate",
     "db:studio": "npx drizzle-kit studio"
@@ -15,10 +15,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/swagger": "^9.5.2",
+    "@scalar/fastify-api-reference": "^1.37.0",
     "drizzle-orm": "^0.44.5",
     "fastify": "^5.6.0",
+    "fastify-type-provider-zod": "^6.0.0",
     "pg": "^8.16.3",
-    "pino-pretty": "^13.1.1"
+    "pino-pretty": "^13.1.1",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@types/node": "^24.5.2",
