feat: implemented tests end to end by vitetest, refactored server connection, created enrollments schema

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,8 @@ services:
       POSTGRES_DB: desafio
     ports:
       - "5432:5432"
-#     volumes:
+    volumes:
+      - ./docker/setup.sql:/docker-entrypoint-initdb.d/init.sql
 #       - pg-desafio-api-data:/var/lib/postgresql/data
 
 # volumes:
