--- a/.env.test
+++ b/.env.test
@@ -1,2 +1,5 @@
 NODE_ENV=test
 DATABASE_URL=postgres://admin:admin@localhost:5432/desafio_testes
+
+
+JWT_SECRET="b14c063b-815f-455c-80b7-9366ad5586a0"
