--- a/package.json
+++ b/package.json
@@ -20,15 +20,18 @@
   "dependencies": {
     "@fastify/swagger": "^9.5.2",
     "@scalar/fastify-api-reference": "^1.37.0",
+    "argon2": "^0.44.0",
     "drizzle-orm": "^0.44.5",
     "fastify": "^5.6.0",
     "fastify-type-provider-zod": "^6.0.0",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
     "pino-pretty": "^13.1.1",
     "zod": "^4.1.11"
   },
   "devDependencies": {
     "@faker-js/faker": "^10.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.5.2",
     "@types/supertest": "^6.0.3",
     "@vitest/coverage-v8": "^3.2.4",
