dockerfile to deploy

--- a/.example.env
+++ b/.example.env
@@ -1,1 +1,5 @@
+#Create a .env.test and a .env file based on this example and change the values accordingly
+NODE_ENV=    #test or development
 DATABASE_URL=postgres://user:password@localhost:PORT/database_name
+
+JWT_SECRET="Your-secret-key-here"
