--- a/fly.toml
+++ b/fly.toml
@@ -18,4 +18,4 @@ primary_region = 'gru'
   memory_mb = 1024
 
 [deploy]
-  released_command = "npm run db:migrate"
+  release_command = "npm run db:migrate"
